--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Profile</title>
+    <title>Home</title>
 
     <!-- Link CSS -->
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="/styles/main.css">
     <!-- Link Scripts -->
     <script src="/scripts/app.js"></script>
     <!--Font Awesome-->
@@ -17,7 +17,7 @@
 <header>
     
     <div class="logo" style="position: flex">
-        <a href="#home"></a><img src="image/cp logo-2077.png">
+        <a href="#home"></a><img src="images/cp logo-2077.png">
     </div>
 
     <div class="bar"></div>
@@ -28,7 +28,7 @@
 
 
 <body>
-    <h1>User Profile</h1>
+    <h1>Home</h1>
 
     
 
