--- a/views/userProfile.ejs
+++ b/views/userProfile.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>User Profile</title>
 
     <!-- Link CSS -->
     <link rel="stylesheet" href="/styles/main.css">
@@ -28,7 +28,7 @@
 
 
 <body>
-    <h1>Home</h1>
+    <h1>User Profile</h1>
 
     
 
