--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,7 +1,7 @@
 
 body, html{
     margin: 0;
-    background: url(images/backgroundimg.jpg);
+    background: url(public/images/backgroundimg.jpg);
     background-position: fixed;
     background-repeat: no-repeat;
     background-size: cover; 
