--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -17,7 +17,7 @@
 <header>
     
     <div class="logo" style="position: flex">
-        <a href="#home"></a><img src="images/cp logo-2077.png">
+        <a href="#home"></a><img src="public/images/cp logo-2077.png">
     </div>
 
     <div class="bar"></div>
@@ -44,6 +44,39 @@
         <div id="navtop"></div>
         <div id="navbottom"></div>
     </div>
+
+    <main>
+        <div class="login">
+                     <form action="/login" method="POST">
+                      <label>Email</label>
+                      <div class="ui left icon input">
+                        <input type="email" name="email" placeholder="Email" required>
+                        <i class="user icon"></i>
+                      </div>
+                    </div>
+                    <div class="field">
+                      <label>Password</label>
+                      <div class="ui left icon input">
+                        <input type="password" name="password" required>
+          
+                        <i class="lock icon"></i>
+                      </div>
+                    </div>
+                    <input type="submit" value="login" class="ui blue submit button"></input>
+                  </div>
+                </div>
+              </form>
+                <!-- Sign up  -->
+                <div class="middle aligned column">
+                  <a href="/register">
+                  <div class="ui big button">
+                    <i class="signup icon"></i>
+                    Sign Up
+                  </div>
+                </a>
+                </div>
+              </div>
+    </main>
 
 </body>
 </html>
