--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -11,6 +11,7 @@ body, html{
     background-size: 300vh;
 }
 
+/* Header */
 header {
     position: fixed;
     top: 0;
@@ -20,37 +21,35 @@ header {
     width: 100%;
     padding: 1px;
     background:#F2E205;
-    
-  }
+    }
     .logo {
         position: flex;
     }
+  
+    #top {
+        overflow: hidden;
+        background-color: white;
+        position: fixed; 
+        left: 0;
+        top: 0; 
+        width: 100%; 
+        height: 5px;
+        }   
 
-    
-#top {
-    overflow: hidden;
-    background-color: white;
-    position: fixed; 
-    left: 0;
-    top: 0; 
-    width: 100%; 
-    height: 5px;
-}   
-
-#bottom {
-    overflow: hidden;
-    background-color: white;
-    position: fixed; 
-    left: 0;
-    top: 23%; 
-    width: 100%; 
-    height: 5px;
-}
-
+    #bottom {
+        overflow: hidden;
+        background-color: white;
+        position: fixed; 
+        left: 0;
+        top: 23%; 
+        width: 100%; 
+        height: 5px;
+        }
 
 
 
 
+/* Navigation Bar*/
 .navbar {
     overflow: hidden;
     background-color: white;
@@ -59,34 +58,76 @@ header {
     top: 27%; 
     width: 74.8%; 
     height: 30px;
-    
     }
+    .navbar a{
+        color: rgb(71, 70, 70);
+        float: right;
+        right: 10%;
+        height: 100%;
+        padding-right: 1em;
+        padding-top: .5em;
+        }
+    #navtop {
+        overflow: hidden;
+        background-color: white;
+        position: fixed; 
+        top: 26%; 
+        width: 100%; 
+        height: .5px;
+        }   
+    #navbottom {
+        overflow: hidden;
+        background-color: white;
+        position: fixed; 
+        top: 31%; 
+        width: 100%; 
+        height: .5px;
+        }
 
-.navbar a{
-    color: rgb(71, 70, 70);
-    float: right;
-    right: 10%;
-    height: 100%;
-    padding-right: 1em;
-    padding-top: .5em;
-}
-#navtop {
-    overflow: hidden;
-    background-color: white;
-    position: fixed; 
-    left: 24%;
-    top: 26%; 
-    width: 80%; 
-    height: .5px;
-}   
 
-#navbottom {
-    overflow: hidden;
-    background-color: white;
-    position: fixed; 
-    left: 24%;
-    top: 31%; 
-    width: 80%; 
-    height: .5px;
+/* Register Form */
+div.register {
+    display: block;
+    text-align: center;
+    margin-top: 250px;
+    
 }
+    .input-container {
+         display: block;
+         width: 100%;
+         margin-bottom: 15px;
+        }
+
+    .icon {
+        padding: 10px;
+        background: #091833;
+         color: white;
+        min-width: 50px;
+         text-align: center;
+        }
+
+    .input-field {
+        width: 20%;
+        padding: 10px;
+         outline: none;
+        }
+
+    .input-field:focus {
+         border: 3px solid dodgerblue;
+        }
+
+    .btn {
+        background-color: #091833;
+        color: white;
+        padding: 15px 20px;
+        border: none;
+        cursor: pointer;
+        width: 25%;
+        opacity: 0.9;
+        }
+
+    .btn:hover {
+        opacity: 1;
+        color: #ea00d9;
+        }
 
