--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -33,6 +33,7 @@
       
 
     <div class="navbar">
+        <a href="#message"><i class="fas fa-envelope"></i></a>
         <a href="#post"><i class="fas fa-pencil-alt"></i></a>
         <a href="#home"><i class="fas fa-home"></i></a>
         <a href="#profile"><i class="fas fa-user-circle"></i></a>
