--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login/Register</title>
+    <title>Login</title>
 
     <!-- Link CSS -->
     <link rel="stylesheet" href="/styles/main.css">
@@ -28,9 +28,9 @@
 
 
 <body>
-    <h1>Login/Register</h1>
+    <h1>Login</h1>
 
-    
+      
 
     <div class="navbar">
         <a href="#message"><i class="fas fa-envelope"></i></a>
@@ -46,36 +46,23 @@
     </div>
 
     <main>
-        <div class="login">
-                     <form action="/login" method="POST">
-                      <label>Email</label>
-                      <div class="ui left icon input">
-                        <input type="email" name="email" placeholder="Email" required>
-                        <i class="user icon"></i>
-                      </div>
-                    </div>
-                    <div class="field">
-                      <label>Password</label>
-                      <div class="ui left icon input">
-                        <input type="password" name="password" required>
+       <div class="login">
+        <form action="/action_page.php">
+            <h2>Login</h2>
+                     
+            <div class="input-container">
+              <i class="fa fa-envelope icon"></i>
+              <input class="input-field" type="text" placeholder="Email" name="email">
+            </div>
           
-                        <i class="lock icon"></i>
-                      </div>
-                    </div>
-                    <input type="submit" value="login" class="ui blue submit button"></input>
-                  </div>
-                </div>
-              </form>
-                <!-- Sign up  -->
-                <div class="middle aligned column">
-                  <a href="/register">
-                  <div class="ui big button">
-                    <i class="signup icon"></i>
-                    Sign Up
-                  </div>
-                </a>
-                </div>
-              </div>
+            <div class="input-container">
+              <i class="fa fa-key icon"></i>
+              <input class="input-field" type="password" placeholder="Password" name="psw">
+            </div>
+          
+            <button type="submit" class="btn">Register</button>
+          </form>
+        </div> 
     </main>
 
 </body>
