css files updated reg. login &show

--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -73,10 +73,9 @@
                        <p>
                           <label>Select Category</label>
                           <select id = "category">
-                            <option value = "1">one</option>
-                            <option value = "2">two</option>
-                            <option value = "3">three</option>
-                            <option value = "4">four</option>
+                            <option value = "1">graphical</option>
+                            <option value = "2">functional</option>
+                            <option value = "3">performance</option>
                           </select>
                        </p>
                     </fieldset>
