--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -123,10 +123,14 @@
                        <legend>System</legend>
                        <p>
                            <select id = "system">
-                            <option value = "1">one</option>
-                            <option value = "2">two</option>
-                            <option value = "3">three</option>
-                            <option value = "4">four</option>
+                            <option value = "1">XboxOne</option>
+                            <option value = "2">XboxOne S</option>
+                            <option value = "3">Xbox Series X</option>
+                            <option value = "4">Xbox Series S</option>
+                            <option value = "5">PS4</option>
+                            <option value = "6">PS4 Pro</option>
+                            <option value = "7">PS5</option>
+                            <option value = "8">PC</option>
                           </select>
                        </p>
                     </fieldset>
