--- a/views/reports/index.ejs
+++ b/views/reports/index.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= report.title %></title>
+    <title></title>
 
     <!-- Link CSS -->
     <link rel="stylesheet" href="/styles/main.css">
@@ -28,7 +28,7 @@
 
 
 <body>
-    <h1><%= report.title %></h1>
+    <h1></h1>
 
     
 
@@ -44,6 +44,8 @@
         <div id="navtop"></div>
         <div id="navbottom"></div>
     </div>
+ 
+<% reports.forEach(report => { %>
     <article class="report">
         <section class="report-header">
             <section class="report--header__toprow">
@@ -74,5 +76,8 @@
             <p class="report--body__aside__time"><%= report.createdAt.toLocaleDateString(); %></p>
         </aside>
     </article>
+
+<% }) %>
+
 </body>
 </html>
