--- a/views/users/accountSettings.ejs
+++ b/views/users/accountSettings.ejs
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="/styles/main.css">
     <!-- Link Scripts -->
     <script src="/scripts/app.js"></script>
+    <!-- Link Jquery-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!--Font Awesome-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
 
@@ -45,7 +47,56 @@
         <div id="navbottom"></div>
     </div>
 
-    
+    <body>
+        <main>
+          <div class="container">
+              <div class="leftbox">
+                  <nav>
+                      <a onclick="tabs(0)" class="tab active">
+                          <i class="fa.fa-user"></i> 
+                      </a>
+  
+                      <a onclick="tabs(1)" class="tab">
+                          <i class="fa.fa-cog"></i> 
+                      </a>
+  <!--not sure if im using -->
+                      <a onclick="tabs(2)" class="tab">
+                          <i class="fa.fa-user"></i> 
+                      </a>
+                  
+                  </nav>
+              </div>
+              
+              <div class="rightbox">
+                  <div class="profile tabShow">
+                      <h1>Profile Settings</h1>
+                      <h2>First Name</h2>
+                      <input type="text" class="input" value="">
+                      <h2>Birthday</h2>
+                      <input type="text" class="input" value="">
+                      <h2>E-mail</h2>
+                      <input type="text" class="input" value="example@example.com">
+                      <h2>Password</h2>
+                      <input type="text" class="input" value="brightcode">
+  
+                      <button class="btn">Update</button>
+                  </div>
+  
+                  <div class="accountSetting tabShow">
+                      <h1>Personal Info</h1>
+                      <h2>Block</h2>
+                      <input type="text" class="input" value="">
+                      <h2>Delete Account</h2>
+                      <input type="text" class="input" value="">
+                      <h2>Your Device</h2>
+                      <input type="text" class="input" value="example@example.com">
+                      
+                      <button class="btn">Update</button>
+                  </div>
+              </div>
+          </div>
+        </main>
 
 </body>
+    
 </html>
