--- a/views/users/accountSettings.ejs
+++ b/views/users/accountSettings.ejs
@@ -48,51 +48,62 @@
     </div>
 
     <body>
+        <div class="navbar">
+            <a href="#message"><i class="fas fa-envelope"></i></a>
+            <a href="#post"><i class="fas fa-pencil-alt"></i></a>
+            <a href="#home"><i class="fas fa-home"></i></a>
+            <a href="#profile"><i class="fas fa-user-circle"></i></a>
+        
+        </div>  
+      
+        <div class="design">
+            <div id="navtop"></div>
+            <div id="navbottom"></div>
+        </div>
+        
         <main>
-          <div class="container">
-              <div class="leftbox">
-                  <nav>
-                      <a onclick="tabs(0)" class="tab active">
-                          <i class="fa.fa-user"></i> 
-                      </a>
-  
-                      <a onclick="tabs(1)" class="tab">
-                          <i class="fa.fa-cog"></i> 
-                      </a>
+            <div class="container">
+                <div class="leftbox">
+                    <nav>
+                        <a onclick="tabs(0)" class="tab active">
+                            <i class="fa fa-user"></i> 
+                        </a>
+    
+                        <a onclick="tabs(1)" class="tab">
+                            <i class="fa fa-cog"></i> 
+                        </a>
                     
-                  </nav>
-              </div>
-              
-              <div class="rightbox">
-                  <div class="profile tabShow">
-                      <h1>Profile Settings</h1>
-                      <h2>First Name</h2>
-                      <input type="text" class="input" value="">
-                      <h2>Birthday</h2>
-                      <input type="text" class="input" value="">
-                      <h2>E-mail</h2>
-                      <input type="text" class="input" value="example@example.com">
-                      <h2>Password</h2>
-                      <input type="text" class="input" value="brightcode">
-  
-                      <button class="btn">Update</button>
-                  </div>
-  
-                  <div class="accountSetting tabShow">
-                      <h1>Personal Info</h1>
-                      <h2>Block</h2>
-                      <input type="text" class="input" value="">
-                      <h2>Delete Account</h2>
-                      <input type="text" class="input" value="">
-                      <h2>Your Device</h2>
-                      <input type="text" class="input" value="example@example.com">
-                      
-                      <button class="btn">Update</button>
-                  </div>
-              </div>
-          </div>
-        </main>
-
+                    </nav>
+                </div>
+                
+                <div class="rightbox">
+                    <div class="profile tabShow">
+                        <h1>Personal Info</h1>
+                        <h2>Name</h2>
+                        <input type="text" class="input" value="Enter Name">
+                        <h2>Birthday</h2>
+                        <input type="text" class="input" value="00/00/0000">
+                        <h2>E-mail</h2>
+                        <input type="text" class="input" value="example@example.com">
+                       
+    
+                        <button class="btn">Update</button>
+                    </div>
+    
+                    <div class="accountSetting tabShow">
+                        <h1>Profile Settings</h1>
+                        <h2>Username</h2>
+                        <input type="text" class="input" value="Username">
+                        <h2>Password</h2>
+                        <input type="password" class="input" value="Enter Password">
+                        <h2>Block</h2>
+                        <input type="text" class="input" value="block users">
+                        
+                        <button class="btn">Update</button>
+                    </div>
+                </div>
+            </div>
+          </main>
 </body>
     
 </html>
