fixes header image

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,7 +17,7 @@
 <header>
     
     <div class="logo" style="position: flex">
-        <a href="#home"></a><img src="public/images/cp logo-2077.png">
+        <a href="#home"></a><img src="images/cp logo-2077.png">
     </div>
 
     <div class="bar"></div>
