--- a/views/users/accountSettings.ejs
+++ b/views/users/accountSettings.ejs
@@ -11,8 +11,12 @@
     <script src="/scripts/app.js"></script>
     <!-- Link Jquery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!--Geodata-->
+    <script src="//geodata.solutions/includes/countrystatecity.js"></script>
     <!--Font Awesome-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
+    
+                        
 
 </head>
 
@@ -60,7 +64,7 @@
             <div id="navtop"></div>
             <div id="navbottom"></div>
         </div>
-        
+
         <main>
             <div class="container">
                 <div class="leftbox">
@@ -83,8 +87,20 @@
                         <input type="text" class="input" value="Enter Name">
                         <h2>Birthday</h2>
                         <input type="text" class="input" value="00/00/0000">
-                        <h2>E-mail</h2>
-                        <input type="text" class="input" value="example@example.com">
+                        <h2>Location</h2>
+                        <select name="country" class="countries" id="countryId">
+                            <option value="">Select Country</option>
+                        </select>
+                        <select name="state" class="states" id="stateId">
+                            <option value="">Select State</option>
+                        </select>
+                        <select name="city" class="cities" id="cityId">
+                            <option value="">Select City</option>
+                        </select>
+                        <h2>Blurb</h2>
+                        <input type="text" class="input" value="Tell me about you">
+                        
+                        
                        
     
                         <button class="btn">Update</button>
@@ -93,11 +109,13 @@
                     <div class="accountSetting tabShow">
                         <h1>Profile Settings</h1>
                         <h2>Username</h2>
-                        <input type="text" class="input" value="Username">
+                        <input type="text" class="username" value="Username">
+                        <h2>E-mail</h2>
+                        <input type="text" class="email" value="example@example.com">
                         <h2>Password</h2>
-                        <input type="password" class="input" value="Enter Password">
+                        <input type="password" class="password" value="Enter Password">
                         <h2>Block</h2>
-                        <input type="text" class="input" value="block users">
+                        <input type="text" class="block" value="block usernames">
                         
                         <button class="btn">Update</button>
                     </div>
