--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register</title>
+    <title>Edit</title>
 
     <!-- Link CSS -->
     <link rel="stylesheet" href="/styles/main.css">
@@ -28,7 +28,7 @@
 
 
 <body>
-    <h1>Register</h1>
+    <h1>Edit</h1>
 
       
 
