removes errant quotes in expectedOutcome textarea

--- a/views/reports/edit.ejs
+++ b/views/reports/edit.ejs
@@ -52,7 +52,7 @@
             <section class="input-container">
                <p>Title</p><p><input class="input-field" type="text" size="55" value="<%= report.title %>" name="title"></p>
                <p>Actual Outcome</p><p><textarea class="input-field" rows="2" cols="50" value="" name="actualOutcome"><%= report.actualOutcome  %></textarea></p>
-               <p>Expected Outcome</p><p><textarea class="input-field" rows="2" cols="50" value="" name="expectedOutcome"><%= report.expectedOutcome %>"</textarea></p>
+               <p>Expected Outcome</p><p><textarea class="input-field" rows="2" cols="50" value="" name="expectedOutcome"><%= report.expectedOutcome %></textarea></p>
                <p>What Happened / How to Reproduce</p><p><textarea class="input-field" rows="7" cols="50" value="" name="description"><%= report.description %></textarea></p>
             </section>
 
