--- a/public/styles/userProfile.css
+++ b/public/styles/userProfile.css
@@ -90,3 +90,86 @@ header {
     height: .5px;
 }
 /*end of navbar*/
+
+aside {
+    position: relative;
+    top: 20em;
+    box-shadow: 0 0 4px #ea00d9;
+    width: 350px;
+    height: 100%;
+    z-index: 10;
+    float:keft;
+    background: #091833;
+    
+}
+aside h1{
+    padding: 20px;
+    text-transform: uppercase;
+    color: #0abdc6;
+ }
+.close{
+    float:right;
+    font-size: .9em;
+    display: none;
+    cursor: pointer;
+}
+aside .user-side {
+    padding: 20px;
+    border-top: 1px solid #e9e9e9;
+}
+aside .user-pic {
+    float: left;
+    width: 70px;
+    height: 70px;
+    padding: 2px;
+    border-radius: 12px;
+    margin-right: 15px;
+    overflow: hidden;
+}
+aside .user-pic img {
+    width: 100%;
+    height: 100%
+}
+aside .user-info {
+    display: flex;
+    flex-direction: column;
+    color: #ea00d9;
+}
+aside .username {
+    margin-top: 10px;
+    margin-bottom: 7px;
+    font-size: 1.3em;
+    text-transform: uppercase;
+    font-weight: 900
+}
+
+.side-nav{
+    padding: 20px 0;
+    padding-bottom: 10px;
+    margin-bottom: 40px;
+}
+.side-nav h2{
+    font-size: 1.2em;
+    padding: 10px 0px 5px 20px;
+    color: white;
+    margin-bottom: 10px;
+}
+.side-nav ul li {
+    display: flex;
+    width: 100%;
+    position: relative;
+    padding: 8px 0px 8px 20px;
+    margin-bottom: 10px;
+    cursor: pointer;
+    transition: all .4s ease;
+}
+.side-nav ul li.active,
+.side-nav ul li:hoover {
+    background:  #ea00d9;
+}
+
+.side-nav ul li span{
+    margin-right: 10px;
+    font-size: 12px;
+    width: 30px;
+}
