Added all button functionalities to UserProfile

--- a/views/users/usersProfile.ejs
+++ b/views/users/usersProfile.ejs
@@ -59,17 +59,23 @@
                 <nav>
                     <ul>
                         <li class="active" onclick="show(0)">
-                            <span><i class="fa fa-pen"></i></span></li>
+                            <span><i class="fa fa-pen"></i></span>
                             <h3>Posts</h3>
+                        </li>
+                            
                             
     
                         <li onclick="show(1)">
-                            <span><i class="fa fa-comments"></i></span></li>
-                                
+                            <span><i class="fa fa-comments"></i></span>
                             <h3>Messages</h3>
+                        </li>
+                                
+                            
                         <li onclick="show(2)">
-                            <span><i class="fa fa-cog"></i></span></li>
-                        <h3>Account Settings</h3>
+                            <span><i class="fa fa-cog"></i></span>
+                            <h3>Account Settings</h3>
+                        </li>
+                            
                     </ul>
                 </nav>
             </div>
