--- a/views/users/usersProfile.ejs
+++ b/views/users/usersProfile.ejs
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="public/styles/userProfile.css">
     <!-- Link Scripts -->
     <script src="public/scripts/userProfile.js"></script>
+    <!-- Link Jquery-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!--Font Awesome-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
 
