--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -8,7 +8,9 @@
     <!-- Link CSS -->
     <link rel="stylesheet" href="/styles/main.css">
     <!-- Link Scripts -->
-    <script src="/scripts/app.js"></script>
+    <script src="public/scripts/register.js"></script>
+    <!-- Link Jquery-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!--Font Awesome-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
 
