--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -6,9 +6,11 @@
     <title>Post Entry</title>
 
     <!-- Link CSS -->
-    <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="/public/styles/new.css">
     <!-- Link Scripts -->
-    <script src="/scripts/app.js"></script>
+    <script src="public/scripts/new.js"></script>
+    <!-- Link Jquery-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!--Font Awesome-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
 
