--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -49,101 +49,106 @@
     </div>
 
     <main>
-        <div class="post">
-            <form action="/action_page.php">
-                <h2>Post</h2>
-                <div class="input-container">
-                   <input class="input-field" type="text" placeholder="Title" name="title">
-                </div>
+      <div class="post">
+         <form action="/action_page.php">
+             <h2>Post</h2>
+         <div class="row">
+             <div class="column"> 
+             <div class="input-container">
+                <input class="input-field" type="text" placeholder="Title" name="title">
+             </div>
+          <div class="response"> 
+             <div class="input-container">
+                 <input class="input-field" type="text" placeholder="Actual Outcome" name="outcome">
+              </div>
+
+              <div class="input-container">
+                 <input class="input-field" type="text" placeholder="Expected Outcome" name="expoutcome">
+              </div>
+
+              <div class="input-container">
+                 <input class="input-field" type="text" placeholder="Reproduce" name="reproduce">
+              </div>
+              </form>
+             </div>
+         </div>
+             
+         <div class="column" style="text-align: center">
+             <form>
+                 <fieldset>
+                    <legend>Category</legend>
+                    <p>
+                         <select id = "category">
+                         <option value = "1">graphical</option>
+                         <option value = "2">functional</option>
+                         <option value = "3">performance</option>
+                       </select>
+                    </p>
+                 </fieldset>
+              </form>
+
+              <form>
+                 <fieldset>
+                    <legend>Severity</legend>
+                    <p>
+                        <select id = "severity">
+                         <option value = "1">low</option>
+                         <option value = "2">medium</option>
+                         <option value = "3">high</option>
+                         <option value = "4">critical</option>
+                       </select>
+                    </p>
+                 </fieldset>
+              </form>
+
+              <form>
+                 <fieldset>
+                    <legend>frequency</legend>
+                    <p>
+                        <select id = "frequency">
+                         <option value = "1">1-2</option>
+                         <option value = "2">2-3</option>
+                         <option value = "3">3-4</option>
+                         <option value = "4">5 or more</option>
+                       </select>
+                    </p>
+                 </fieldset>
+              </form>
+
+              <form>
+                 <fieldset>
+                    <legend>Date Occured</legend>
               
-                <div class="input-container">
-                    <input class="input-field" type="text" placeholder="Actual Outcome" name="outcome">
-                 </div>
+                    <input type="date" id="start" name="trip-start"
+                     value="2018-07-22"
+                     min="2018-01-01" max="2018-12-31">
+                 </fieldset>
+             </form>
 
-                 <div class="input-container">
-                    <input class="input-field" type="text" placeholder="Expected Outcome" name="expoutcome">
-                 </div>
-
-                 <div class="input-container">
-                    <input class="input-field" type="text" placeholder="Reproduce" name="reproduce">
-                 </div>
-                 </form>
+              <form>
+                 <fieldset>
+                    <legend>System</legend>
+                    <p>
+                        <select id = "system">
+                         <option value = "1">XboxOne</option>
+                         <option value = "2">XboxOne S</option>
+                         <option value = "3">Xbox Series X</option>
+                         <option value = "4">Xbox Series S</option>
+                         <option value = "5">PS4</option>
+                         <option value = "6">PS4 Pro</option>
+                         <option value = "7">PS5</option>
+                         <option value = "8">PC</option>
+                       </select>
+                    </p>
+                 </fieldset>
+              </form>
             
-                <form>
-                    <fieldset>
-                       <legend>Category</legend>
-                       <p>
-                            <select id = "category">
-                            <option value = "1">graphical</option>
-                            <option value = "2">functional</option>
-                            <option value = "3">performance</option>
-                          </select>
-                       </p>
-                    </fieldset>
-                 </form>
-
-                 <form>
-                    <fieldset>
-                       <legend>Severity</legend>
-                       <p>
-                           <select id = "severity">
-                            <option value = "1">low</option>
-                            <option value = "2">medium</option>
-                            <option value = "3">high</option>
-                            <option value = "4">critical</option>
-                          </select>
-                       </p>
-                    </fieldset>
-                 </form>
-
-                 <form>
-                    <fieldset>
-                       <legend>frequency</legend>
-                       <p>
-                           <select id = "frequency">
-                            <option value = "1">1-2</option>
-                            <option value = "2">2-3</option>
-                            <option value = "3">3-4</option>
-                            <option value = "4">5 or more</option>
-                          </select>
-                       </p>
-                    </fieldset>
-                 </form>
-
-                 <form>
-                    <fieldset>
-                       <legend>Date Occured</legend>
-                 
-                       <input type="date" id="start" name="trip-start"
-                        value="2018-07-22"
-                        min="2018-01-01" max="2018-12-31">
-                    </fieldset>
-                </form>
-
-                 <form>
-                    <fieldset>
-                       <legend>System</legend>
-                       <p>
-                           <select id = "system">
-                            <option value = "1">XboxOne</option>
-                            <option value = "2">XboxOne S</option>
-                            <option value = "3">Xbox Series X</option>
-                            <option value = "4">Xbox Series S</option>
-                            <option value = "5">PS4</option>
-                            <option value = "6">PS4 Pro</option>
-                            <option value = "7">PS5</option>
-                            <option value = "8">PC</option>
-                          </select>
-                       </p>
-                    </fieldset>
-                 </form>
-               
-                <button type="submit" class="btn">Post</button>
-                
-              
-            </div> 
-        </main>
-    </main>
+             <button type="submit" class="btn">Post</button>
+         </div>    
+     </div> 
+         </div> 
+     </main>
+ </main>
 
 </body>
 </html>
