changes 3 dots to 'EDIT'

--- a/views/reports/index.ejs
+++ b/views/reports/index.ejs
@@ -70,7 +70,11 @@
             <p class="report--body__description"><%= report.description %></p>
         </section>
         <aside class="report--body__aside">
-            <p><i class="fas fa-ellipsis-h"></i></p>
+            <p>
+                <% if(report.createdBy._id == user.id) { %>
+                <a href="/reports/<%= report._id %>/edit ">EDIT</a>   
+                <% } %>
+            </p>
             <p class="report--body__aside__img"><img src="<%= report.imageLinks[0] %>" alt=""></p>
             <p class="report--body__aside__time"><%= report.createdAt.toLocaleDateString(); %></p>
         </aside>
