fixed relative paths on files

--- a/views/users/view-users.ejs
+++ b/views/users/view-users.ejs
@@ -6,9 +6,10 @@
     <title>View User</title>
 
     <!-- Link CSS -->
-    <link rel="stylesheet" href="public/styles/view-users.css">
+    <link rel="stylesheet" href="public/styles/userProfile.css">
+    <link rel="stylesheet" href="public/styles/show.css">
     <!-- Link Scripts -->
-    <script src="public/scripts/view-users.js"></script>
+    <script src="public/scripts/app.js"></script>
     <!-- Link Jquery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!--Font Awesome-->
