--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,9 +6,10 @@
     <title>Home</title>
 
     <!-- Link CSS -->
-    <link rel="stylesheet" href="public/styles/home.css">
+    <link rel="stylesheet" href="public/styles/userProfile.css">
+    <link rel="stylesheet" href="public/styles/show.css">
     <!-- Link Scripts -->
-    <script src="public/scripts/home.js"></script>
+    <script src="public/scripts/app.js"></script>
     <!-- Link Jquery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!--Font Awesome-->
