--- a/views/users/accountSettings.ejs
+++ b/views/users/accountSettings.ejs
@@ -6,9 +6,11 @@
     <title>Account Settings</title>
 
     <!-- Link CSS -->
-    <link rel="stylesheet" href="public/styles/accountSettings.css">
+    <link rel="stylesheet" href="public/styles/userProfile.css">
+    <link rel="stylesheet" href="public/styles/show.css">
+
     <!-- Link Scripts -->
-    <script src="public/scripts/accountSettings.js"></script>
+    <script src="public/scripts/app.js"></script>
     <!-- Link Jquery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!--Geodata-->
