--- a/views/users/usersProfile.ejs
+++ b/views/users/usersProfile.ejs
@@ -7,8 +7,9 @@
 
     <!-- Link CSS -->
     <link rel="stylesheet" href="public/styles/userProfile.css">
+    <link rel="stylesheet" href="public/styles/profileCard.css">
     <!-- Link Scripts -->
-    <script src="public/scripts/userProfile.js"></script>
+    <script src="public/scripts/app.js"></script>
     <!-- Link Jquery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!--Font Awesome-->
